--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="images/unicah.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="/estilo.css" /> -->
      <link rel="stylesheet" href="less/estilo.less" />
      <link rel="stylesheet" href="tailwindcss/index.css" />
-    <title>Desarrollo de Portales Web II</title>
+    <title>Galeria TES</title>
   </head>
   <body>
      {{>header}}
